// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Transform pending transaction 1`] = `
{
  "account_id": "acc_os41qe3a66ks2djhss000",
  "amount": -83.62,
  "balance": null,
  "bank_account_id": "acc_os41qe3a66ks2djhss000",
  "category": "other",
  "currency": "USD",
  "currency_rate": null,
  "currency_source": null,
  "date": "2024-03-05",
  "description": "Bank Of Many",
  "id": "txn_os41r5u90e29shubl2000",
  "internal_id": "txn_os41r5u90e29shubl2000",
  "method": "other",
  "name": "Online Check Deposit",
  "status": "pending",
}
`;

exports[`Transform pending transaction 2`] = `
{
  "account_id": "acc_os41qe3a66ks2djhss000",
  "amount": -29,
  "balance": null,
  "bank_account_id": "acc_os41qe3a66ks2djhss000",
  "category": "other",
  "currency": "USD",
  "currency_rate": null,
  "currency_source": null,
  "date": "2024-03-05",
  "description": "Bank Of Many",
  "id": "txn_os41r5u90e29shubl2000",
  "internal_id": "txn_os41r5u90e29shubl2000",
  "method": "other",
  "name": "Technology",
  "status": "pending",
}
`;

exports[`Transform card payment transaction 1`] = `
{
  "account_id": "acc_os41qe3a66ks2djhss000",
  "amount": -68.9,
  "balance": 83431.46,
  "bank_account_id": "acc_os41qe3a66ks2djhss000",
  "category": "other",
  "currency": "USD",
  "currency_rate": null,
  "currency_source": null,
  "date": "2024-03-01",
  "description": null,
  "id": "txn_os41r5u90e29shubl2005",
  "internal_id": "txn_os41r5u90e29shubl2005",
  "method": "card_purchase",
  "name": "Nordstrom",
  "status": "posted",
}
`;

exports[`Transform income transaction 1`] = `
{
  "account_id": "acc_os41qe3a66ks2djhss000",
  "amount": 1000000,
  "balance": 83296.4,
  "bank_account_id": "acc_os41qe3a66ks2djhss000",
  "category": "income",
  "currency": "USD",
  "currency_rate": null,
  "currency_source": null,
  "date": "2024-03-03",
  "description": null,
  "id": "txn_os41r5u90e29shubl2002",
  "internal_id": "txn_os41r5u90e29shubl2002",
  "method": "card_purchase",
  "name": "Exxon Mobil",
  "status": "posted",
}
`;

exports[`Transform type transfer 1`] = `
{
  "account_id": "acc_os41qe3a66ks2djhss000",
  "amount": -37.99,
  "balance": 85897.25,
  "bank_account_id": "acc_os41qe3a66ks2djhss000",
  "category": "transfer",
  "currency": "USD",
  "currency_rate": null,
  "currency_source": null,
  "date": "2024-01-27",
  "description": "Yourself",
  "id": "txn_os41r5ua0e29shubl2001",
  "internal_id": "txn_os41r5ua0e29shubl2001",
  "method": "transfer",
  "name": "Recurring Transfer To Savings",
  "status": "posted",
}
`;

exports[`Transform accounts 1`] = `
{
  "balance": {
    "amount": 2011100,
    "currency": "USD",
  },
  "currency": "USD",
  "enrollment_id": "enr_os557c8pck2deoskak000",
  "id": "acc_os557c2mge29shubl2000",
  "institution": {
    "id": "mercury",
    "logo": "https://cdn-engine.midday.ai/mercury.jpg",
    "name": "Mercury",
    "provider": "teller",
  },
  "name": "Platinum Card",
  "type": "credit",
}
`;

exports[`Transform account balance 1`] = `
{
  "amount": 2011100,
  "currency": "USD",
}
`;
